add teachers creating
big commit splitted into multiple meaningless commits
