# teachers/routes.go
@@ -1,0 +1,13 @@
+package teachers
+
+import (
+	"github.com/gin-gonic/gin"
+	"learn-n-grow.dev/m/teachers/controllers"
+)
+
+func AddRoutes(r *gin.RouterGroup) {
+	g := r.Group("/teachers")
+	{
+		g.POST("/", teachers.Create)
+	}
+}
